--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "firebase": "^9.9.0",
+    "date-fns": "^2.29.1",
+    "firebase": "^9.9.1",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2"
   },
